--- a/src/resources/reports/LaporanDataKriteriaNCL.jrxml
+++ b/src/resources/reports/LaporanDataKriteriaNCL.jrxml
@@ -34,7 +34,7 @@
 		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="MySQL"/>
 		<queryString language="SQL">
-			<![CDATA[select * from  saw_kinerja_karyawan_biznet.criteria]]>
+			<![CDATA[select * from  saw_karyawan_ncl.criteria]]>
 		</queryString>
 		<field name="id" class="java.lang.Integer">
 			<property name="com.jaspersoft.studio.field.name" value="id"/>
@@ -59,7 +59,7 @@
 	</subDataset>
 	<parameter name="PATH" class="java.lang.String"/>
 	<queryString language="SQL">
-		<![CDATA[select * from  saw_kinerja_karyawan_biznet.criteria limit 1]]>
+		<![CDATA[select * from  saw_karyawan_ncl.criteria limit 1]]>
 	</queryString>
 	<field name="id" class="java.lang.Integer">
 		<property name="com.jaspersoft.studio.field.name" value="id"/>
@@ -87,7 +87,7 @@
 	<pageHeader>
 		<band height="80" splitType="Stretch">
 			<frame>
-				<reportElement mode="Opaque" x="-20" y="-30" width="595" height="110" forecolor="#FFFCFC" backcolor="#FFFFFF" uuid="a0b4dd6c-e9ab-4b4b-9441-0a913f8d689c"/>
+				<reportElement mode="Opaque" x="-20" y="-30" width="595" height="110" forecolor="#FFFCFC" backcolor="#FFFFFF" uuid="b449405b-f0a0-4a64-909c-a57586cb8601"/>
 				<box padding="0">
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -96,27 +96,27 @@
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<staticText>
-					<reportElement x="100" y="21" width="430" height="30" forecolor="#000000" uuid="4b3d312e-82d6-4350-9de3-10ac58683c19"/>
+					<reportElement x="90" y="21" width="430" height="30" forecolor="#000000" uuid="8e5e03ef-b768-4213-8006-2f4c6455a666"/>
 					<textElement textAlignment="Center">
 						<font fontName="Times New Roman" size="20" isBold="true"/>
 						<paragraph lineSpacingSize="1.0"/>
 					</textElement>
-					<text><![CDATA[ PT SUPRA PRIMATAMA NUSANTARA]]></text>
+					<text><![CDATA[Nielsen Consumer LLC]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="180" y="51" width="260" height="20" forecolor="#000000" uuid="70e0952c-4e2a-4480-8b9a-9ec8599d5ff4"/>
+					<reportElement x="220" y="52" width="260" height="20" forecolor="#000000" uuid="6b32826d-818e-41a6-a214-8eeac4c28524"/>
 					<textElement>
 						<font fontName="Times New Roman"/>
 					</textElement>
-					<text><![CDATA[Jl. Riverside Golf Club No.1, Bojong Nangka, Kec. Gn. Putri]]></text>
+					<text><![CDATA[Jl. Raya Condet Kramat Jati Jakarta Timur]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="220" y="71" width="180" height="20" forecolor="#000000" uuid="df60e13a-fea5-4d3a-93e4-14ef6a2a6c85"/>
-					<text><![CDATA[Kabupaten Bogor, Jawa Barat 16965]]></text>
+					<reportElement x="250" y="73" width="180" height="20" forecolor="#000000" uuid="3b0cc022-272c-4df3-a99c-41f9d0a73251"/>
+					<text><![CDATA[DKI JAKARTA 13450]]></text>
 				</staticText>
 				<image>
-					<reportElement x="40" y="25" width="50" height="50" uuid="23d5bb3f-e081-4190-9f1d-1a95495589ee"/>
-                                        <imageExpression><![CDATA[$P{PATH}+"logo_PT_Supra_Primatama_Nusantara-200.png"]]></imageExpression>
+					<reportElement x="40" y="25" width="100" height="100" uuid="7d8173cf-db76-4b80-b00f-514678a5c8bc"/>
+					<imageExpression><![CDATA[$P{PATH}+"niq-full.png"]]></imageExpression>
 				</image>
 			</frame>
 		</band>
@@ -255,7 +255,7 @@
 				<textElement textAlignment="Right">
 					<paragraph rightIndent="10"/>
 				</textElement>
-				<text><![CDATA[ Sri Mulyati]]></text>
+				<text><![CDATA[Admin]]></text>
 			</staticText>
 		</band>
 	</pageFooter>
