--- a/src/resources/reports/ReportRangkingNCL.jrxml
+++ b/src/resources/reports/ReportRangkingNCL.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.21.2.final using JasperReports Library version 6.21.2-8434a0bd7c3bbc37cbf916f2968d35e4b165821a  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ReportNormalisasi" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="67660a55-d14b-4ea0-8f15-a5d768db5504">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ReportRangking" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="7d624f2a-8e2a-459a-a0d2-e588c53b0ed6">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="MySQL"/>
 	<style name="Table_TH" mode="Opaque" backcolor="#F0F8FF">
@@ -30,77 +30,70 @@
 			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<subDataset name="normalisasi" uuid="dd826aca-5e9c-4f87-96c9-57bb803ec1fa">
+	<subDataset name="rangking" uuid="739e88c1-94a5-441c-824b-d82d06149ff7">
 		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="MySQL"/>
 		<queryString language="SQL">
 			<![CDATA[SELECT 
-  p.name AS nama_pelanggan,
-  c.id AS id_kriteria,
-  c.nama AS nama_kriteria,
-  sc.jumlah_bobot AS bobot_alternatif,
-  c.type,
-  
-  CASE 
-    WHEN c.type = 'benefit' THEN ROUND(sc.jumlah_bobot / pembagi_table.pembagi, 4)
-    WHEN c.type = 'cost' THEN ROUND(pembagi_table.pembagi / sc.jumlah_bobot, 4)
-  END AS nilai_normalisasi
+    p.name AS nama_pelanggan,
+    ROUND(SUM(
+        CASE 
+            WHEN c.type = 'benefit' THEN (sc.jumlah_bobot / pembagi_table.pembagi) * (c.bobot / total_weight.total)
+            WHEN c.type = 'cost' THEN (pembagi_table.pembagi / sc.jumlah_bobot) * (c.bobot / total_weight.total)
+        END
+    ), 4) AS total_nilai,
+    RANK() OVER (ORDER BY 
+        SUM(
+            CASE 
+                WHEN c.type = 'benefit' THEN (sc.jumlah_bobot / pembagi_table.pembagi) * (c.bobot / total_weight.total)
+                WHEN c.type = 'cost' THEN (pembagi_table.pembagi / sc.jumlah_bobot) * (c.bobot / total_weight.total)
+            END
+        ) DESC
+    ) AS peringkat
+FROM saw_karyawan_ncl.alternatif AS a
+JOIN saw_karyawan_ncl.employees AS p ON a.id_employee = p.id
+JOIN saw_karyawan_ncl.sub_criteria AS sc ON a.id_sub_kreteria = sc.id
+JOIN saw_karyawan_ncl.criteria AS c ON sc.id_kreteria = c.id
 
-FROM saw_kinerja_karyawan_biznet.alternatif AS a
-JOIN saw_kinerja_karyawan_biznet.employees AS p ON a.id_employee = p.id
-JOIN saw_kinerja_karyawan_biznet.sub_criteria AS sc ON a.id_sub_kreteria = sc.id
-JOIN saw_kinerja_karyawan_biznet.criteria AS c ON sc.id_kreteria = c.id
-
--- Join ke pembagi
+-- Subquery untuk menghitung nilai pembagi tiap kriteria
 JOIN (
-  SELECT 
-    c.id AS id_kriteria,
-    CASE 
-      WHEN c.type = 'benefit' THEN MAX(sc.jumlah_bobot)
-      WHEN c.type = 'cost' THEN MIN(sc.jumlah_bobot)
-    END AS pembagi
-  FROM saw_kinerja_karyawan_biznet.alternatif AS a
-  JOIN saw_kinerja_karyawan_biznet.sub_criteria AS sc ON a.id_sub_kreteria = sc.id
-  JOIN saw_kinerja_karyawan_biznet.criteria AS c ON sc.id_kreteria = c.id
-  GROUP BY c.id, c.type
+    SELECT 
+        c.id AS id_kriteria,
+        CASE 
+            WHEN c.type = 'benefit' THEN MAX(sc.jumlah_bobot)
+            WHEN c.type = 'cost' THEN MIN(sc.jumlah_bobot)
+        END AS pembagi
+    FROM saw_karyawan_ncl.alternatif AS a
+    JOIN saw_karyawan_ncl.sub_criteria AS sc ON a.id_sub_kreteria = sc.id
+    JOIN saw_karyawan_ncl.criteria AS c ON sc.id_kreteria = c.id
+    GROUP BY c.id, c.type
 ) AS pembagi_table ON pembagi_table.id_kriteria = c.id
 
-ORDER BY p.name, c.id;]]>
+-- Subquery untuk total bobot
+JOIN (
+    SELECT SUM(bobot) AS total FROM saw_karyawan_ncl.criteria
+) AS total_weight
+
+GROUP BY p.name
+ORDER BY total_nilai DESC;]]>
 		</queryString>
 		<field name="nama_pelanggan" class="java.lang.String">
 			<property name="com.jaspersoft.studio.field.name" value="name"/>
 			<property name="com.jaspersoft.studio.field.label" value="nama_pelanggan"/>
 			<property name="com.jaspersoft.studio.field.tree.path" value="employees"/>
 		</field>
-		<field name="id_kriteria" class="java.lang.Integer">
-			<property name="com.jaspersoft.studio.field.name" value="id"/>
-			<property name="com.jaspersoft.studio.field.label" value="id_kriteria"/>
-			<property name="com.jaspersoft.studio.field.tree.path" value="criteria"/>
+		<field name="total_nilai" class="java.math.BigDecimal">
+			<property name="com.jaspersoft.studio.field.name" value="total_nilai"/>
+			<property name="com.jaspersoft.studio.field.label" value="total_nilai"/>
 		</field>
-		<field name="nama_kriteria" class="java.lang.String">
-			<property name="com.jaspersoft.studio.field.name" value="nama"/>
-			<property name="com.jaspersoft.studio.field.label" value="nama_kriteria"/>
-			<property name="com.jaspersoft.studio.field.tree.path" value="criteria"/>
-		</field>
-		<field name="bobot_alternatif" class="java.math.BigDecimal">
-			<property name="com.jaspersoft.studio.field.name" value="jumlah_bobot"/>
-			<property name="com.jaspersoft.studio.field.label" value="bobot_alternatif"/>
-			<property name="com.jaspersoft.studio.field.tree.path" value="sub_criteria"/>
-		</field>
-		<field name="type" class="java.lang.String">
-			<property name="com.jaspersoft.studio.field.name" value="type"/>
-			<property name="com.jaspersoft.studio.field.label" value="type"/>
-			<property name="com.jaspersoft.studio.field.tree.path" value="criteria"/>
-		</field>
-		<field name="nilai_normalisasi" class="java.math.BigDecimal">
-			<property name="com.jaspersoft.studio.field.name" value="nilai_normalisasi"/>
-			<property name="com.jaspersoft.studio.field.label" value="nilai_normalisasi"/>
+		<field name="peringkat" class="java.lang.Long">
+			<property name="com.jaspersoft.studio.field.name" value="peringkat"/>
+			<property name="com.jaspersoft.studio.field.label" value="peringkat"/>
 		</field>
 	</subDataset>
 	<parameter name="PATH" class="java.lang.String"/>
-	<parameter name="Parameter1" class="java.lang.String"/>
 	<queryString language="SQL">
-		<![CDATA[select * from saw_kinerja_karyawan_biznet.users limit 1]]>
+		<![CDATA[select * from saw_karyawan_ncl.users limit 1]]>
 	</queryString>
 	<field name="id" class="java.lang.Integer">
 		<property name="com.jaspersoft.studio.field.name" value="id"/>
@@ -138,7 +131,7 @@ ORDER BY p.name, c.id;]]>
 	<pageHeader>
 		<band height="80" splitType="Stretch">
 			<frame>
-				<reportElement mode="Opaque" x="-20" y="-30" width="595" height="110" forecolor="#FFFCFC" backcolor="#FFFFFF" uuid="83dfeee4-f9bc-4a84-bcdf-be270b773818"/>
+				<reportElement mode="Opaque" x="-20" y="-30" width="595" height="110" forecolor="#FFFCFC" backcolor="#FFFFFF" uuid="e937ecd1-32b5-467c-91d6-8e95273433bd"/>
 				<box padding="0">
 					<pen lineColor="#000000"/>
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -147,27 +140,27 @@ ORDER BY p.name, c.id;]]>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
 				<staticText>
-					<reportElement x="100" y="21" width="430" height="30" forecolor="#000000" uuid="41600e99-039c-4f99-afea-987ac4ebf494"/>
+					<reportElement x="90" y="21" width="430" height="30" forecolor="#000000" uuid="d40e4019-e1dc-49d3-842e-2db9f1057b6d"/>
 					<textElement textAlignment="Center">
 						<font fontName="Times New Roman" size="20" isBold="true"/>
 						<paragraph lineSpacingSize="1.0"/>
 					</textElement>
-					<text><![CDATA[ PT SUPRA PRIMATAMA NUSANTARA]]></text>
+					<text><![CDATA[Nielsen Consumer LLC]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="180" y="51" width="260" height="20" forecolor="#000000" uuid="cac70114-6243-49fa-8b50-1f78053c9dd8"/>
+					<reportElement x="220" y="52" width="260" height="20" forecolor="#000000" uuid="8dcbfc94-9366-4ed3-90f9-a359c7cdbca7"/>
 					<textElement>
 						<font fontName="Times New Roman"/>
 					</textElement>
-					<text><![CDATA[Jl. Riverside Golf Club No.1, Bojong Nangka, Kec. Gn. Putri]]></text>
+					<text><![CDATA[Jl. Raya Condet Kramat Jati Jakarta Timur]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="220" y="71" width="180" height="20" forecolor="#000000" uuid="f9d79e40-947a-48fc-9aec-e56241a81f85"/>
-					<text><![CDATA[Kabupaten Bogor, Jawa Barat 16965]]></text>
+					<reportElement x="250" y="73" width="180" height="20" forecolor="#000000" uuid="ed81c90e-ddaa-4140-b1ac-d17c10d55b5a"/>
+					<text><![CDATA[DKI JAKARTA 13450]]></text>
 				</staticText>
 				<image>
-					<reportElement x="40" y="25" width="50" height="50" uuid="23d5bb3f-e081-4190-9f1d-1a95495589ee"/>
-                                        <imageExpression><![CDATA[$P{PATH}+"logo_PT_Supra_Primatama_Nusantara-200.png"]]></imageExpression>
+					<reportElement x="40" y="25" width="100" height="100" uuid="7d8173cf-db76-4b80-b00f-514678a5c8bc"/>
+					<imageExpression><![CDATA[$P{PATH}+"niq-full.png"]]></imageExpression>
 				</image>
 			</frame>
 		</band>
@@ -175,18 +168,18 @@ ORDER BY p.name, c.id;]]>
 	<columnHeader>
 		<band height="61" splitType="Stretch">
 			<staticText>
-				<reportElement x="133" y="10" width="288" height="30" uuid="9041129a-0fee-4697-8a3d-4f1c423c2c85"/>
+				<reportElement x="133" y="10" width="288" height="30" uuid="6b8953ca-8c11-4aeb-9ad4-3c1ab1a01c21"/>
 				<textElement textAlignment="Center">
 					<font size="20" isBold="true"/>
 				</textElement>
-				<text><![CDATA[Laporan Data Normalisasi]]></text>
+				<text><![CDATA[Laporan Rangking]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="285" splitType="Stretch">
+		<band height="260" splitType="Stretch">
 			<componentElement>
-				<reportElement x="-10" y="10" width="580" height="200" uuid="2df284cc-2458-469f-a4a3-8097f891c9d5">
+				<reportElement x="-17" y="10" width="587" height="250" uuid="e21673d6-5a55-4b45-bdb6-57f22f1636f4">
 					<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.VerticalRowLayout"/>
 					<property name="com.jaspersoft.studio.table.style.table_header" value="Table_TH"/>
 					<property name="com.jaspersoft.studio.table.style.column_header" value="Table_CH"/>
@@ -195,27 +188,24 @@ ORDER BY p.name, c.id;]]>
 					<property name="com.jaspersoft.studio.components.autoresize.proportional" value="true"/>
 				</reportElement>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
-					<datasetRun subDataset="normalisasi" uuid="0f76d683-fa09-4b2e-8316-1a019da06a76">
+					<datasetRun subDataset="rangking" uuid="1b56965f-62a3-412f-9fdb-40d771d3ccd4">
 						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
-					<jr:column width="194" uuid="e49c0af2-1d12-486b-bf41-4d313a1f6b2b">
-						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column1"/>
-						<jr:columnHeader style="Table_CH" height="30">
+					<jr:column width="196" uuid="a7948710-4be9-4a5a-ac94-202593a65da1">
+						<jr:tableHeader style="Table_TH" height="30">
 							<staticText>
-								<reportElement x="0" y="0" width="194" height="30" uuid="b14efe91-d269-42be-8f52-6168e2b06fd7">
-									<property name="com.jaspersoft.studio.unit.firstLineIndent" value="px"/>
-									<property name="com.jaspersoft.studio.unit.spacingAfter" value="px"/>
+								<reportElement x="0" y="0" width="196" height="30" uuid="9e2d8c45-9a8f-4fea-8e61-a1bd40a5bbd7">
 									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Center">
-									<paragraph firstLineIndent="10" spacingBefore="10" spacingAfter="10"/>
+									<paragraph spacingBefore="10"/>
 								</textElement>
 								<text><![CDATA[Nama Peserta]]></text>
 							</staticText>
-						</jr:columnHeader>
+						</jr:tableHeader>
 						<jr:detailCell style="Table_TD" height="30">
 							<textField>
-								<reportElement x="0" y="0" width="194" height="30" uuid="7f95a51e-bad7-4517-813c-522c5c099469">
+								<reportElement x="0" y="0" width="196" height="30" uuid="cf854987-928a-4d7d-b3f0-81412608013a">
 									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Center">
@@ -225,57 +215,51 @@ ORDER BY p.name, c.id;]]>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="193" uuid="3390f0e2-ac8f-4eba-ae92-e2d2e88fddea">
-						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column2"/>
-						<jr:columnHeader style="Table_CH" height="30">
+					<jr:column width="196" uuid="31f2ee6d-5ae2-4243-b614-8a6a5d4a3cee">
+						<jr:tableHeader style="Table_TH" height="30">
 							<staticText>
-								<reportElement x="0" y="0" width="193" height="30" uuid="9b967ac0-68ca-412e-b432-f325ef0b078c">
-									<property name="com.jaspersoft.studio.unit.firstLineIndent" value="px"/>
-									<property name="com.jaspersoft.studio.unit.spacingAfter" value="px"/>
-									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
-								</reportElement>
-								<textElement textAlignment="Center">
-									<paragraph firstLineIndent="10" spacingBefore="10" spacingAfter="10"/>
-								</textElement>
-								<text><![CDATA[Nama Kriteria]]></text>
-							</staticText>
-						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="30">
-							<textField>
-								<reportElement x="0" y="0" width="193" height="30" uuid="dd91a0e8-438c-4f06-881f-4a0d0d489bf5">
+								<reportElement x="0" y="0" width="196" height="30" uuid="d6f54534-28d0-4995-85cd-ba23ab963340">
 									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Center">
 									<paragraph spacingBefore="10"/>
 								</textElement>
-								<textFieldExpression><![CDATA[$F{nama_kriteria}]]></textFieldExpression>
+								<text><![CDATA[Total Nilai]]></text>
+							</staticText>
+						</jr:tableHeader>
+						<jr:detailCell style="Table_TD" height="30">
+							<textField>
+								<reportElement x="0" y="0" width="196" height="30" uuid="ac010d17-20d7-4b84-9e4f-7214f14c2e25">
+									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
+								</reportElement>
+								<textElement textAlignment="Center">
+									<paragraph spacingBefore="10"/>
+								</textElement>
+								<textFieldExpression><![CDATA[$F{total_nilai}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="193" uuid="72773b25-76a2-4293-aa92-a88c7b267933">
-						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column3"/>
-						<jr:columnHeader style="Table_CH" height="30">
+					<jr:column width="195" uuid="49f8cd2a-52f2-4c94-876d-f5dc08164b83">
+						<jr:tableHeader style="Table_TH" height="30">
 							<staticText>
-								<reportElement x="0" y="0" width="193" height="30" uuid="5a1315d3-068a-43e5-a23d-2f72cb3604ed">
-									<property name="com.jaspersoft.studio.unit.firstLineIndent" value="px"/>
-									<property name="com.jaspersoft.studio.unit.spacingAfter" value="px"/>
-									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
-								</reportElement>
-								<textElement textAlignment="Center">
-									<paragraph firstLineIndent="10" spacingBefore="10" spacingAfter="10"/>
-								</textElement>
-								<text><![CDATA[Nilai Normalisasi]]></text>
-							</staticText>
-						</jr:columnHeader>
-						<jr:detailCell style="Table_TD" height="30">
-							<textField>
-								<reportElement x="0" y="0" width="193" height="30" uuid="4f4207d2-ad3d-4788-b412-94da6a878c26">
+								<reportElement x="0" y="0" width="195" height="30" uuid="68827649-5122-4762-897c-729b4198a33a">
 									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Center">
 									<paragraph spacingBefore="10"/>
 								</textElement>
-								<textFieldExpression><![CDATA[$F{nilai_normalisasi}]]></textFieldExpression>
+								<text><![CDATA[Rangking]]></text>
+							</staticText>
+						</jr:tableHeader>
+						<jr:detailCell style="Table_TD" height="30">
+							<textField>
+								<reportElement x="0" y="0" width="195" height="30" uuid="4f3f380f-8640-42b3-b99b-c5fd7ddb67b2">
+									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
+								</reportElement>
+								<textElement textAlignment="Center">
+									<paragraph spacingBefore="10"/>
+								</textElement>
+								<textFieldExpression><![CDATA[$F{peringkat}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
@@ -286,7 +270,7 @@ ORDER BY p.name, c.id;]]>
 	<pageFooter>
 		<band height="154" splitType="Stretch">
 			<textField pattern="MMMMM dd, yyyy">
-				<reportElement x="-20" y="20" width="594" height="19" uuid="f3122718-e890-4b51-af85-fbb7b9d1ae51">
+				<reportElement x="-20" y="20" width="594" height="19" uuid="d093389b-7d63-4f53-bdf0-0c0e770f3685">
 					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Right">
@@ -295,7 +279,7 @@ ORDER BY p.name, c.id;]]>
 				<textFieldExpression><![CDATA["Jakarta, " + new java.text.SimpleDateFormat("EEEE, dd MMMM yyyy", new java.util.Locale("id", "ID")).format(new java.util.Date())]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="-18" y="50" width="588" height="19" uuid="ed664fcf-7ae8-4182-98e7-69a4afc26b91">
+				<reportElement x="-18" y="50" width="588" height="19" uuid="eb053141-2c5a-4e41-b523-b11ceb30ca0c">
 					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Right">
@@ -305,14 +289,14 @@ ORDER BY p.name, c.id;]]>
 				<text><![CDATA[HRD]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="-17" y="130" width="561" height="24" uuid="3bbfcd62-2a94-4e7c-b6c2-774c210cec58">
+				<reportElement x="-18" y="130" width="560" height="24" uuid="727c6684-29ff-4c16-92e7-de6f3e2c2382">
 					<property name="com.jaspersoft.studio.unit.spacingBefore" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.rightIndent" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Right">
 					<paragraph rightIndent="10"/>
 				</textElement>
-				<text><![CDATA[Indah]]></text>
+				<text><![CDATA[Admin]]></text>
 			</staticText>
 		</band>
 	</pageFooter>
