--- a/src/resources/reports/LaporanKaryawanNCL.jrxml
+++ b/src/resources/reports/LaporanKaryawanNCL.jrxml
@@ -46,9 +46,14 @@
 			<property name="com.jaspersoft.studio.field.label" value="name"/>
 			<property name="com.jaspersoft.studio.field.tree.path" value="employees"/>
 		</field>
-		<field name="position" class="java.lang.String">
-			<property name="com.jaspersoft.studio.field.name" value="position"/>
-			<property name="com.jaspersoft.studio.field.label" value="position"/>
+		<field name="jenis_kelamin" class="java.lang.String">
+			<property name="com.jaspersoft.studio.field.name" value="jenis_kelamin"/>
+			<property name="com.jaspersoft.studio.field.label" value="jenis_kelamin"/>
+			<property name="com.jaspersoft.studio.field.tree.path" value="employees"/>
+		</field>
+		<field name="alamat" class="java.lang.String">
+			<property name="com.jaspersoft.studio.field.name" value="alamat"/>
+			<property name="com.jaspersoft.studio.field.label" value="alamat"/>
 			<property name="com.jaspersoft.studio.field.tree.path" value="employees"/>
 		</field>
 	</subDataset>
@@ -66,9 +71,14 @@
 		<property name="com.jaspersoft.studio.field.label" value="name"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="employees"/>
 	</field>
-	<field name="position" class="java.lang.String">
-		<property name="com.jaspersoft.studio.field.name" value="position"/>
-		<property name="com.jaspersoft.studio.field.label" value="position"/>
+	<field name="jenis_kelamin" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.name" value="jenis_kelamin"/>
+		<property name="com.jaspersoft.studio.field.label" value="jenis_kelamin"/>
+		<property name="com.jaspersoft.studio.field.tree.path" value="employees"/>
+	</field>
+	<field name="alamat" class="java.lang.String">
+		<property name="com.jaspersoft.studio.field.name" value="alamat"/>
+		<property name="com.jaspersoft.studio.field.label" value="alamat"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="employees"/>
 	</field>
 	<background>
@@ -94,18 +104,18 @@
 					<text><![CDATA[Nielsen Consumer LLC]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="220" y="52" width="260" height="20" forecolor="#000000" uuid="032d289b-bd98-4bc9-91e9-e8c4f05b6c90"/>
+					<reportElement x="130" y="54" width="380" height="20" forecolor="#000000" uuid="032d289b-bd98-4bc9-91e9-e8c4f05b6c90"/>
 					<textElement>
 						<font fontName="Times New Roman"/>
 					</textElement>
-					<text><![CDATA[Jl. Raya Condet Kramat Jati Jakarta Timur]]></text>
+					<text><![CDATA[Millenium Centennial Center lantai 43&46, Jl. Jenderal Sudirman No.Kav 28, RT.4/RW.2]]></text>
 				</staticText>
 				<staticText>
-					<reportElement x="250" y="73" width="180" height="20" forecolor="#000000" uuid="3e5fb385-5509-455e-9661-5a09670aeb3e"/>
-					<text><![CDATA[DKI JAKARTA 13450]]></text>
+					<reportElement x="150" y="71" width="340" height="20" forecolor="#000000" uuid="3e5fb385-5509-455e-9661-5a09670aeb3e"/>
+					<text><![CDATA[Kuningan, Karet Kuningan, Setiabudi, Kota Jakarta Selatan, Jakarta 12920]]></text>
 				</staticText>
 				<image>
-					<reportElement x="40" y="25" width="100" height="100" uuid="7d8173cf-db76-4b80-b00f-514678a5c8bc"/>
+					<reportElement x="25" y="35" width="100" height="100" uuid="7d8173cf-db76-4b80-b00f-514678a5c8bc"/>
 					<imageExpression><![CDATA[$P{PATH}+"niq-full.png"]]></imageExpression>
 				</image>
 			</frame>
@@ -137,11 +147,11 @@
 					<datasetRun subDataset="Peserta" uuid="dd249c7e-ad96-43d0-af83-082eaac13d5c">
 						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
-					<jr:column width="286" uuid="2727b463-ab3d-4641-8439-cbd1cdccfc99">
+					<jr:column width="210" uuid="2727b463-ab3d-4641-8439-cbd1cdccfc99">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column1"/>
 						<jr:tableHeader style="Table_TH" height="30" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="286" height="30" uuid="5562cc5f-8c8e-443b-9d62-90ff51252d75">
+								<reportElement x="0" y="0" width="210" height="30" uuid="5562cc5f-8c8e-443b-9d62-90ff51252d75">
 									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Center">
@@ -152,7 +162,7 @@
 						</jr:tableHeader>
 						<jr:detailCell style="Table_TD" height="30">
 							<textField>
-								<reportElement x="0" y="0" width="286" height="30" uuid="0987176e-4833-4436-852a-fbe36e75d1c9">
+								<reportElement x="0" y="0" width="210" height="30" uuid="0987176e-4833-4436-852a-fbe36e75d1c9">
 									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Center">
@@ -162,28 +172,53 @@
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="284" uuid="0b21e6f8-7652-4acc-b435-c1c228b1873b">
+					<jr:column width="181" uuid="0b21e6f8-7652-4acc-b435-c1c228b1873b">
 						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column2"/>
 						<jr:tableHeader style="Table_TH" height="30" rowSpan="1">
 							<staticText>
-								<reportElement x="0" y="0" width="284" height="30" uuid="8c77f3c0-d41f-4868-a2a2-1c31ae5a22a2">
+								<reportElement x="0" y="0" width="181" height="30" uuid="8c77f3c0-d41f-4868-a2a2-1c31ae5a22a2">
 									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Center">
 									<paragraph spacingBefore="10"/>
 								</textElement>
-								<text><![CDATA[JABATAN]]></text>
+								<text><![CDATA[JENIS KELAMIN]]></text>
 							</staticText>
 						</jr:tableHeader>
 						<jr:detailCell style="Table_TD" height="30">
 							<textField>
-								<reportElement x="0" y="0" width="284" height="30" uuid="e40bd1be-f9e2-4807-be67-d6a678544292">
+								<reportElement x="0" y="0" width="181" height="30" uuid="e40bd1be-f9e2-4807-be67-d6a678544292">
 									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
 								</reportElement>
 								<textElement textAlignment="Center">
 									<paragraph spacingBefore="10"/>
 								</textElement>
-								<textFieldExpression><![CDATA[$F{position}]]></textFieldExpression>
+								<textFieldExpression><![CDATA[$F{jenis_kelamin}]]></textFieldExpression>
+							</textField>
+						</jr:detailCell>
+					</jr:column>
+					<jr:column width="179" uuid="e3262ac3-cf29-4dc1-834b-51381aab46c5">
+						<property name="com.jaspersoft.studio.components.table.model.column.name" value="Column3"/>
+						<jr:tableHeader style="Table_TH" height="30" rowSpan="1">
+							<staticText>
+								<reportElement x="0" y="0" width="179" height="30" uuid="2c83ce52-1e79-447c-81c8-2910917ff2ab">
+									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
+								</reportElement>
+								<textElement textAlignment="Center">
+									<paragraph spacingBefore="10"/>
+								</textElement>
+								<text><![CDATA[ALAMAT]]></text>
+							</staticText>
+						</jr:tableHeader>
+						<jr:detailCell style="Table_TD" height="30">
+							<textField>
+								<reportElement x="0" y="0" width="179" height="30" uuid="4786ba20-07c1-4938-8814-c7c6d37573e5">
+									<property name="com.jaspersoft.studio.unit.spacingBefore" value="px"/>
+								</reportElement>
+								<textElement textAlignment="Center">
+									<paragraph spacingBefore="10"/>
+								</textElement>
+								<textFieldExpression><![CDATA[$F{alamat}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
